# tracing-actions

./: Cargo.toml  README.md  install_protoc.sh
.github/workflows/: release.yaml
proto/opentelemetry/: README.md
proto/opentelemetry/proto/trace/v1/: trace.proto
proto_generator/: Cargo.toml  build.rs
proto_generator/src/: lib.rs
tracing_actions/: Cargo.toml  README.md
tracing_actions/.github/workflows/: pr.yaml  release.yaml
tracing_actions/benches/: bench_main.rs
tracing_actions/benches/benchmarks/: mod.rs  tracing_bench.rs
tracing_actions/src/: action_span.rs  action_trace_subscriber.rs  lib.rs  span_constructor.rs
tracing_actions_otlp/: Cargo.toml  README.md
tracing_actions_otlp/src/: channel_connection.rs  header_interceptor.rs  lib.rs  otlp_action_trace_sink.rs  proto_conversions.rs
tracing_actions_otlp/src/proto/: mod.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.trace.v1.rs
