[package]
name = "tracing-actions"
version = { workspace = true }
edition = "2021"
description = "Tracing subscriber that vends action trace structures to a callback"
license = "Apache-2.0"
authors = ["kvc0"]
readme = "README.md"
repository = "https://github.com/kvc0/tracing-actions"
keywords = ["tracing", "service", "performance"]
categories = ["web-programming", "development-tools::profiling"]

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[dependencies]
tracing = { version = "0.1" }
tracing-core = { version = "0.1" }
log = { version = "0.4" }
rand = { version = "0.8" }
# Because `tracing` is per-thread contextual
thread_local = { version = "1.1" }

[dev-dependencies]
criterion = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
