[package]
name = "tracing-actions-otlp"
version = { workspace = true }
edition = "2021"
description = "tracing-actions extension that sends action traces to an opentelemetry server."
license = "Apache-2.0"
authors = ["kvc0"]
readme = "README.md"
repository = "https://github.com/kvc0/tracing-actions"
keywords = ["tracing", "service", "performance"]
categories = ["web-programming", "development-tools::profiling"]

[lib]
bench = false

[dependencies]
tokio = { version = "1.28" }
hyper = { version = "0.14" }
tower = { version = "0.4" }
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
tokio-rustls = { version = "0.24", features = [ "dangerous_configuration" ] }
hyper-rustls = { version = "0.24", features = [ "http2" ] }
http-body = { version = "0.4" }
prost = { version = "0.11" }
log = { version = "0" }
webpki-roots = { version = "0.23" }
tracing = { version = "0.1" }

tracing-actions = { workspace = true }
